k8s/charts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: althira-products-api-ingress
  namespace: althira-products
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://dev.sellers.althira.com"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    # Esto fuerza a que las cabeceras se envíen siempre
    nginx.ingress.kubernetes.io/cors-expose-headers: "*"
    # --- SOLUCIÓN PARA MAYÚSCULAS/MINÚSCULAS ---
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(?i)/(.*)$ /$1 break;
spec:
  rules:
    - host: dev.products.althira.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: althira-products-srv
                port:
                  number: 80
